--- a/index.html
+++ b/index.html
@@ -24,14 +24,6 @@ date: 2022-02-08
         text-align: center;
     }
 
-    .juftin-logo {
-        max-width: 12%;
-        max-height: 12%;
-        padding: 2%;
-        display: block;
-        margin: auto;
-    }
-
 </style>
 
 <img src="https://raw.githubusercontent.com/juftin/juftin/main/static/juftin.png"
@@ -40,6 +32,6 @@ date: 2022-02-08
 
 <div class="homepage-container">
     <h1>what's juftin up to?</h1>
-    and <a href="/about"
-           style="text-decoration: none;">who's this juftin guy?</a>
+    and <a href="/about/"
+           style="text-decoration: none;">who's juftin?</a>
 </div>
