--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ layout: home
 date: 2022-02-08
 ---
 
-<link rel="shortcut icon"
-      href="https://raw.githubusercontent.com/juftin/juftin/main/static/juftin.png"
->
+<link
+    rel="shortcut icon"
+    href="https://raw.githubusercontent.com/juftin/juftin/main/static/juftin.png"
+/>
 
 <style>
-
     .main-picture {
         max-width: 30%;
         max-height: 30%;
@@ -23,15 +23,15 @@ date: 2022-02-08
         alignment: center;
         text-align: center;
     }
-
 </style>
 
-<img src="https://raw.githubusercontent.com/juftin/juftin/main/static/juftin.png"
-     alt="juftin"
-     class="main-picture">
+<img
+    src="https://raw.githubusercontent.com/juftin/juftin/main/static/juftin.png"
+    alt="juftin"
+    class="main-picture"
+/>
 
 <div class="homepage-container">
     <h1>what's juftin up to?</h1>
-    and <a href="/about/"
-           style="text-decoration: none;">who's juftin?</a>
+    and <a href="/about/" style="text-decoration: none">who's juftin?</a>
 </div>
